--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
 				color: rgb(128, 128, 128);
 				cursor: pointer;
 			}
-			
+			.slider_next:hover,
+			.slider_prev:hover {
+				color: #FFFFFF;
+			}
 			.slider_prev {
 				float: left;
 				margin-left: 80px;
